syntax = "proto2";
option java_package = "proto";

// CMD format:
// Byte 0: Fixed 0x1 protocol header/version
// Byte 1: packet length 3-255 (inclues all transfered bytes: header, len,
// msgId, msgBody and CRC16)
// Byte 2: message id
// Byte 3-n message body
// Byte n-1 CRC16

enum RequestId {
  MSG_NONE = 0;
  READ_CONFIG = 1;
  WRITE_CONFIG = 2;
  GET_STATS = 3;
  CALLIBRATE_ACC = 4;
  SAVE_CONFIG = 5;
  GET_DEBUG_BUFFER = 6;
  SET_DEBUG_STREAM_ID = 7;
  TOGGLE_PASSTHROUGH = 8;
  GET_CONFIG_DESCRIPTOR = 9;
}

enum ReplyId {
  NO_REPLY = 0;
  GENERIC_OK = 1;
  GENERIC_FAIL = 2;
  STATS = 3;
  CONFIG = 4;
  CRC_MISMATCH = 5;
  DEBUG_BUFFER = 6;
  CONFIG_DESCRIPTOR = 7;
}

message Stats {
  optional float batt_voltage = 1;
  optional float batt_current = 2;
  optional float motor_current = 3;
  optional float speed = 5;
  optional float distance_traveled = 6;
  optional float drive_angle = 7;
  optional float stear_angle = 8;

  optional uint32 pad_pressure1 = 9;
  optional uint32 pad_pressure2 = 10;

  optional float motor_duty = 11;
  optional float esc_temp = 12;
  optional float motor_temp = 13;
  required float speed2 = 14;

  optional float gyro0 = 15;
  optional float gyro1 = 16;
  optional float gyro2 = 17;

  optional float acc0 = 18;
  optional float acc1 = 19;
  optional float acc2 = 20;
}